-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-libs
-
None
-
b20
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206778 | 12 | Paul Sandoz | P4 | Resolved | Fixed | team |
| JDK-8206555 | 11.0.1 | Paul Sandoz | P4 | Resolved | Fixed | b01 |
It is not currently possible to assign a compatible functional interface to a method reference referring to a signature polymorphic method on a VarHandle.
This is an oversight missed in the original integration of VarHandles.
Additionally, javac behaviour may need to be checked for polymorphic return types when matching the return type of the polymorphic method with the return type of the functional interface method.
This is an oversight missed in the original integration of VarHandles.
Additionally, javac behaviour may need to be checked for polymorphic return types when matching the return type of the polymorphic method with the return type of the functional interface method.
- backported by
-
JDK-8206555 Method references to VarHandle accessors
-
- Resolved
-
-
JDK-8206778 Method references to VarHandle accessors
-
- Resolved
-
- relates to
-
JDK-8188145 MethodHandle resolution should follow JVMS sequence of lookup by name & type before type descriptor resolution
-
- Closed
-
-
JDK-8194963 SystemDictionary::link_method_handle_constant() can't link MethodHandle.invoke()/invokeExact()
-
- Closed
-