8195650: Method references to VarHandle accessors

Reviewed-by: jrose